code/compiler/test/analysis/diagnostics_input_tests/global_access2.c.diag
Error: [Basic] Write access to global
                from: "foo" (<input_filepath>@8:5)
                from: "main"
<input_filepath>@4:5-4:9
    x = 5;
    ^~~~~
