code/compiler/test/analysis/diagnostics_input_tests/global_access2.c
int x;

void foo(void) {
    x = 5;
}

int main(void) {
    foo();
}
